fix: keep Phase 12 resource test Java-compatible